# veloApp

./: .env.example  .gitignore  Makefile  README.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: main.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: __init__.py  auth.py  health.py  items.py
backend/app/core/: config.py  firebase.py
backend/app/db/: __init__.py  init.py  session.py
backend/app/db/models/: __init__.py  base.py  item.py  user.py
backend/app/db/repositories/: __init__.py  base.py  item.py  user.py
backend/app/schemas/: __init__.py  item.py  user.py
backend/app/services/: item.py
frontend/: .env.example  Dockerfile  Dockerfile.dev  eslint.config.js  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  middleware.ts
frontend/src/app/: error.tsx  layout.tsx  loading.tsx  not-found.tsx
frontend/src/app/(auth)/: layout.tsx
frontend/src/app/(dashboard)/: layout.tsx  page.tsx
frontend/src/app/calendar/: page.tsx
frontend/src/app/healthcheck/: page.tsx
frontend/src/app/profile/: page.tsx
frontend/src/app/programs/: page.tsx
frontend/src/components/block-editor/: block-editor.tsx  index.ts
frontend/src/config/: index.ts
frontend/src/contexts/: auth-context.tsx  cart-context.tsx  view-mode-context.tsx
frontend/src/hooks/: use-api.ts  useApi.ts  useAuth.ts
frontend/src/lib/: api.ts  auth.ts  firebase.ts  proxy.ts
frontend/src/pages/: Calendar.tsx  Coaches.tsx  HealthCheck.tsx  Home.tsx  Maps.tsx  Profile.tsx  Programs.tsx  Settings.tsx  index.ts
frontend/src/types/: calendar.ts  coach.ts  index.ts  settings.ts  studio.ts
(+46 files in other folders)
